# specora-core

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.shiplog/: routing.md
cli/: package-lock.json  package.json
cli/src/: commands.ts  env.ts  index.ts  registry.ts  session.ts  settings.ts
docs/: CNAME  README.md  _config.yml  architecture.md  cli-reference.md  contract-language-reference.md  contract-memory-roadmap.md  extending-specora.md  extractor.md  frontend-generation.md  getting-started.md  healer.md  llm-providers.md  migrations.md  production-deployment.md  self-healing-loop.md  system-diagrams.md  webhooks.md
engine/: config.py  context.py  engine.py  registry.py
engine/providers/: anthropic.py  base.py  openai.py  zai.py
extractor/: cross_ref.py  emitter.py  models.py  reporter.py  scanner.py  synthesizer.py
extractor/analyzers/: python_models.py  routes.py  typescript_types.py
extractor/cli/: commands.py
factory/: session.py
factory/cli/: add.py  chat.py  explain.py  migrate.py  new.py  refine.py  visualize.py
factory/emitters/: entity_emitter.py  page_emitter.py  route_emitter.py  workflow_emitter.py
factory/interviews/: base.py  (+3 more)
forge/: __init__.py  error_display.py  normalize.py  provenance.py
healer/: applier.py  models.py  notifier.py  pipeline.py  queue.py  watcher.py
pitch/: Specora.docx  deck.md
tests/: test_error_display.py  test_normalize.py  test_provenance.py
(+275 files in other folders)
